--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <div class="war-logo"><img src="./images/warlogo.png" alt=""></div>
         <div class="arena">
             <div class="player1">
-                <p id="counter1">Jugador:</p>
+                <p id="counter1"></p>
                 <img id="player1" src="" alt="">
             </div>
             <div class="player2">
-                <p id="counter2">Computadora</p>
+                <p id="counter2"> </p>
                 <img id="player2" src="" alt="">
             </div>
         </div>
